gcc/testsuite/rust/rustc/ui/consts/min_const_fn/cmp_fn_pointers_dg.rs
const fn cmp(x: fn(), y: fn()) -> bool {
    unsafe { x == y }
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

